--- a/style2.css
+++ b/style2.css
@@ -409,3 +409,59 @@ textarea {
     width: 100%;
     height: 150px;
 }
+
+.emoji-button2 {
+    font-size: 34px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
+
+.emoji-button2::before {
+    content: "\2713"; /* Checkmark symbol */
+    font-size: 20px;
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    color: green;
+    display: none;
+}
+
+.emoji-button2:hover {
+    cursor: pointer;
+}
+
+.emoji-button2.clicked::before {
+    display: inline-block;
+}
+
+.emoji-button3 {
+    font-size: 34px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
+
+.emoji-button3::before {
+    content: "\2713"; /* Checkmark symbol */
+    font-size: 20px;
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    color: green;
+    display: none;
+}
+
+.emoji-button3:hover {
+    cursor: pointer;
+}
+
+.emoji-button3.clicked::before {
+    display: inline-block;
+}
